--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
-#slider {
-    height: 75vh;
+.overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #080d15;
+    opacity: .7;
 }
