course section added

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,10 @@
     background-color: #080d15;
     opacity: .7;
 }
+
+@media screen and (max-width: 576px) {
+    .card {
+        width: 200px;
+        height: auto;
+    }
+}
