--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     filter: brightness(40%);
 }
 
+.accordion-button {
+    font-size: 20px;
+    font-weight: bold;
+}
 @media screen and (max-width: 576px) {
         .carousel-caption {
             width:70%;
@@ -33,6 +37,7 @@
         .carousel-caption .btn {
             font-size: 16px;
         }
+    
 }
 @media screen and (min-width: 900px) {
         .carousel-caption {
