--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
     font-size: 20px;
     font-weight: bold;
 }
+span i {
+    font-size: 30px;
+    color: white;
+    cursor: hover;
+}
 @media screen and (max-width: 576px) {
         .carousel-caption {
             width:70%;
